@@ -8,6 +8,7 @@ cm4all-beng-proxy (0.7.3) unstable; urgency=low
   * python: fixed AttributeError in __getattr__()
   * python: added method Response.process()
   * translation: added the response packets URI, HOST, SCHEME
+  * translation: added header forward packets
 
  --
 
